testsuite/poke.pkl/pinned-int-struct-1.pk
/* { dg-do compile } */

type Foo =
  pinned struct int<32> /* { dg-error "pinned" } */
  {
    int<16> hi;
    uint<16> lo;
  };
